--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_lock">CreateLockActivity</string>
     <string name="package_name">io.wallfly.lockdapp.lockseq</string>
+    <string name="drag_not_registered">Drag was not long enough. Lock not registered.</string>
 
 </resources>
