--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create_lock">CreateLockActivity</string>
-    <string name="package_name">io.wallfly.lockdapp.lockseq</string>
+    <string name="package_name">io.wallfly.lockdapp.lock</string>
     <string name="drag_not_registered">Drag was not long enough. Lock not registered.</string>
     <string name="lock_enabled">Lockd Enabled. System lock disabled.</string>
     <string name="lock_disabled">Lockd disabled. Reinstating system lock...</string>
@@ -22,7 +22,7 @@
     <string name="selection">selection</string>
     <string name="start_raw_coordinates">startRawCoords</string>
     <string name="drag_handle_coords">drag_handle_coords</string>
-    <string name="lockd_description">Version 1.0.0 \n\nThe future of mobile privacy is in your hands - Lockd allows for a new beautiful way to maximize security and customization with your lock pattern on your phone.\n\n\nCredits</string>
+    <string name="lockd_description">Version 1.0.6 \n\nThe future of mobile privacy is in your hands - Lockd allows for a new beautiful way to maximize security and customization with your lock pattern on your phone.\n\n\nCredits</string>
 
     <string name="privacy_policy"><![CDATA[<div class="one_line_col" style="zoom: 1; float: none; width: 740px; border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: rgb(223, 223, 223); border-top-width: 0px; padding-bottom: 21px; color: rgb(107, 107, 107); font-family: 'Helvetica Neue', Helvetica, Arial, FreeSans, sans-serif; font-size: 16px; line-height: 18px;">
 	<h2 style="margin: 0px; padding: 21px 0px 0px; border: 0px; font-size: 17px; line-height: 21px; font-family: inherit; color: rgb(63, 63, 63);">
@@ -85,5 +85,170 @@
 
 	<string name="roboto_font">Roboto.ttf</string>
 	<string name="enable_lock">Hold to enable Lockd</string>
+	<string name="enabled">enabled</string>
+	<string name="float_action_button">fab</string>
+	<string name="show_pattern">Yes, show pattern</string>
+	<string name="no">No</string>
+	<string name="lock_dialog_disabled">lock_dialog_disabled</string>
+	<string name="no_lock_message">Create a lock sequence to display it.</string>
+	<string name="lock_sequence">seq</string>
+	<string name="start_over">Start Over</string>
+	<string name="finished_with_pattern">Are you finished creating your lock pattern?</string>
+	<string name="retry">Retry</string>
+	<string name="incorrect_lock_pattern">You have entered the incorrect lock pattern. Try again or start over.</string>
+	<string name="exit">Exit</string>
+	<string name="roboto_thin_font">Roboto-Thin.ttf</string>
+
+
+
+
+
+
+	<!-- Weather Icons codes -->
+	<!-- See: https://github.com/erikflowers/weather-icons/ -->
+	<string name="wi_day_cloudy_gusts">&#xf000;</string>
+	<string name="wi_day_cloudy_windy">&#xf001;</string>
+	<string name="wi_day_cloudy">&#xf002;</string>
+	<string name="wi_day_fog">&#xf003;</string>
+	<string name="wi_day_hail">&#xf004;</string>
+	<string name="wi_day_lightning">&#xf005;</string>
+	<string name="wi_day_rain_mix">&#xf006;</string>
+	<string name="wi_day_rain_wind">&#xf007;</string>
+	<string name="wi_day_rain">&#xf008;</string>
+	<string name="wi_day_showers">&#xf009;</string>
+	<string name="wi_day_snow">&#xf00a;</string>
+	<string name="wi_day_sprinkle">&#xf00b;</string>
+	<string name="wi_day_sunny_overcast">&#xf00c;</string>
+	<string name="wi_day_sunny">&#xf00d;</string>
+	<string name="wi_day_storm_showers">&#xf00e;</string>
+	<string name="wi_day_thunderstorm">&#xf010;</string>
+	<string name="wi_cloudy_gusts">&#xf011;</string>
+	<string name="wi_cloudy_windy">&#xf012;</string>
+	<string name="wi_cloudy">&#xf013;</string>
+	<string name="wi_fog">&#xf014;</string>
+	<string name="wi_hail">&#xf015;</string>
+	<string name="wi_lightning">&#xf016;</string>
+	<string name="wi_rain_mix">&#xf017;</string>
+	<string name="wi_rain_wind">&#xf018;</string>
+	<string name="wi_rain">&#xf019;</string>
+	<string name="wi_showers">&#xf01a;</string>
+	<string name="wi_snow">&#xf01b;</string>
+	<string name="wi_sprinkle">&#xf01c;</string>
+	<string name="wi_storm_showers">&#xf01d;</string>
+	<string name="wi_thunderstorm">&#xf01e;</string>
+	<string name="wi_windy">&#xf021;</string>
+	<string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
+	<string name="wi_night_alt_cloudy_windy">&#xf023;</string>
+	<string name="wi_night_alt_hail">&#xf024;</string>
+	<string name="wi_night_alt_lightning">&#xf025;</string>
+	<string name="wi_night_alt_rain_mix">&#xf026;</string>
+	<string name="wi_night_alt_rain_wind">&#xf027;</string>
+	<string name="wi_night_alt_rain">&#xf028;</string>
+	<string name="wi_night_alt_showers">&#xf029;</string>
+	<string name="wi_night_alt_snow">&#xf02a;</string>
+	<string name="wi_night_alt_sprinkle">&#xf02b;</string>
+	<string name="wi_night_alt_storm_showers">&#xf02c;</string>
+	<string name="wi_night_alt_thunderstorm">&#xf02d;</string>
+	<string name="wi_night_clear">&#xf02e;</string>
+	<string name="wi_night_cloudy_gusts">&#xf02f;</string>
+	<string name="wi_night_cloudy_windy">&#xf030;</string>
+	<string name="wi_night_cloudy">&#xf031;</string>
+	<string name="wi_night_hail">&#xf032;</string>
+	<string name="wi_night_lightning">&#xf033;</string>
+	<string name="wi_night_rain_mix">&#xf034;</string>
+	<string name="wi_night_rain_wind">&#xf035;</string>
+	<string name="wi_night_rain">&#xf036;</string>
+	<string name="wi_night_showers">&#xf037;</string>
+	<string name="wi_night_snow">&#xf038;</string>
+	<string name="wi_night_sprinkle">&#xf039;</string>
+	<string name="wi_night_storm_showers">&#xf03a;</string>
+	<string name="wi_night_thunderstorm">&#xf03b;</string>
+	<string name="wi_celsius">&#xf03c;</string>
+	<string name="wi_cloud_down">&#xf03d;</string>
+	<string name="wi_cloud_refresh">&#xf03e;</string>
+	<string name="wi_cloud_up">&#xf040;</string>
+	<string name="wi_cloud">&#xf041;</string>
+	<string name="wi_degrees">&#xf042;</string>
+	<string name="wi_down_left">&#xf043;</string>
+	<string name="wi_down">&#xf044;</string>
+	<string name="wi_fahrenheit">&#xf045;</string>
+	<string name="wi_horizon_alt">&#xf046;</string>
+	<string name="wi_horizon">&#xf047;</string>
+	<string name="wi_left">&#xf048;</string>
+	<string name="wi_night_fog">&#xf04a;</string>
+	<string name="wi_refresh_alt">&#xf04b;</string>
+	<string name="wi_refresh">&#xf04c;</string>
+	<string name="wi_right">&#xf04d;</string>
+	<string name="wi_sprinkles">&#xf04e;</string>
+	<string name="wi_strong_wind">&#xf050;</string>
+	<string name="wi_sunrise">&#xf051;</string>
+	<string name="wi_sunset">&#xf052;</string>
+	<string name="wi_thermometer_exterior">&#xf053;</string>
+	<string name="wi_thermometer_internal">&#xf054;</string>
+	<string name="wi_thermometer">&#xf055;</string>
+	<string name="wi_tornado">&#xf056;</string>
+	<string name="wi_up_right">&#xf057;</string>
+	<string name="wi_up">&#xf058;</string>
+	<string name="wi_wind_west">&#xf059;</string>
+	<string name="wi_wind_south_west">&#xf05a;</string>
+	<string name="wi_wind_south_east">&#xf05b;</string>
+	<string name="wi_wind_south">&#xf05c;</string>
+	<string name="wi_wind_north_west">&#xf05d;</string>
+	<string name="wi_wind_north_east">&#xf05e;</string>
+	<string name="wi_wind_north">&#xf060;</string>
+	<string name="wi_wind_east">&#xf061;</string>
+	<string name="wi_smoke">&#xf062;</string>
+	<string name="wi_dust">&#xf063;</string>
+	<string name="wi_snow_wind">&#xf064;</string>
+	<string name="wi_day_snow_wind">&#xf065;</string>
+	<string name="wi_night_snow_wind">&#xf066;</string>
+	<string name="wi_night_alt_snow_wind">&#xf067;</string>
+	<string name="wi_day_sleet_storm">&#xf068;</string>
+	<string name="wi_night_sleet_storm">&#xf069;</string>
+	<string name="wi_night_alt_sleet_storm">&#xf06a;</string>
+	<string name="wi_day_snow_thunderstorm">&#xf06b;</string>
+	<string name="wi_night_snow_thunderstorm">&#xf06c;</string>
+	<string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
+	<string name="wi_solar_eclipse">&#xf06e;</string>
+	<string name="wi_lunar_eclipse">&#xf070;</string>
+	<string name="wi_meteor">&#xf071;</string>
+	<string name="wi_hot">&#xf072;</string>
+	<string name="wi_hurricane">&#xf073;</string>
+	<string name="wi_smog">&#xf074;</string>
+	<string name="wi_alien">&#xf075;</string>
+	<string name="wi_snowflake_cold">&#xf076;</string>
+	<string name="wi_stars">&#xf077;</string>
+	<string name="wi_moon_full">&#xf078;</string>
+	<string name="wi_moon_waxing_gibbous">&#xf079;</string>
+	<string name="wi_moon_waxing_quarter">&#xf07a;</string>
+	<string name="wi_moon_waxing_crescent">&#xf07b;</string>
+	<string name="wi_moon_young">&#xf07c;</string>
+	<string name="wi_moon_new">&#xf07d;</string>
+	<string name="wi_moon_old">&#xf07e;</string>
+	<string name="wi_moon_waning_crescent">&#xf080;</string>
+	<string name="wi_moon_waning_quarter">&#xf081;</string>
+	<string name="wi_moon_waning_gibbous">&#xf082;</string>
+	<string name="wi_night_partly_cloudy">&#xf083;</string>
+
+    <string name="city_name">city_name</string>
+    <string name="title_activity_launcher">LauncherActivity</string>
+	<string name="launcher_activity">launcher</string>
+	<string name="last_temp">last_temperature</string>
+    <string name="title_activity_confirm_lock">ConfirmLockActivity</string>
+	<string name="calling_activity">CallingActivity</string>
+	<string name="device_admin_explanation">To maximize privacy and protection of your phone\'s data, we need you to let us become your official lock screen. For that, we need you to give us permission to handle when to open your phone.</string>
+	<string name="backup_password">backup_password</string>
+	<string name="backup_password_dialog_disabled">backup_password_dialog_disabled</string>
+	<string name="email">email</string>
+	<string name="done">done</string>
+	<string name="later">Later</string>
+	<string name="hint_backup_password">Enter backup pin</string>
+	<string name="confirm">Confirm</string>
+	<string name="hint_confirm_password">Confirm password</string>
+	<string name="registration_id">regID</string>
+	<string name="josh">josh</string>
+    <string name="title_activity_view_text">ViewText</string>
+    <string name="title_activity_encrypted_phone">EncryptedPhoneActivity</string>
+
 
 </resources>
